------------------------------------------------------------------------
r244 | sungo | 2004-05-02 21:08:15 -0400 (Sun, 02 May 2004) | 1 line

add in Changes files and rebuild meta files
------------------------------------------------------------------------
r225 | sungo | 2004-04-24 17:03:13 -0400 (Sat, 24 Apr 2004) | 1 line

switch the version numbers all over to use svn kewords. this will probably cause some cpan pain this once but after this all should be well
------------------------------------------------------------------------
r224 | sungo | 2004-04-24 16:44:16 -0400 (Sat, 24 Apr 2004) | 1 line

switch everythign back to Makemaker. generate META.yml files. some general polishing of dist files
------------------------------------------------------------------------
r222 | sungo | 2004-04-24 13:55:11 -0400 (Sat, 24 Apr 2004) | 2 lines

add keyword interpolation

------------------------------------------------------------------------
r219 | sungo | 2004-04-24 13:26:23 -0400 (Sat, 24 Apr 2004) | 2 lines

add .svn to all skip lists

------------------------------------------------------------------------
r209 | sungo | 2004-03-06 21:06:58 -0500 (Sat, 06 Mar 2004) | 2 lines

add tty size settings to the test environment so Term::ReadKey will compile right. piece of crap

------------------------------------------------------------------------
r208 | sungo | 2004-03-06 20:45:47 -0500 (Sat, 06 Mar 2004) | 2 lines

document the _raw_commands interface

------------------------------------------------------------------------
r206 | sungo | 2004-03-06 20:17:29 -0500 (Sat, 06 Mar 2004) | 2 lines

commands now return their output instead of using the wheel directly. better facilitates usage by outside programs

------------------------------------------------------------------------
r205 | sungo | 2004-03-06 19:44:43 -0500 (Sat, 06 Mar 2004) | 2 lines

add ability to get raw access to the commands
