@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-Component-DebugShell
-version:      1.0225
+version:      1.0411
 version_from: lib/POE/Component/DebugShell.pm
 installdirs:  site
 requires:
