@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------
+r409 | sungo | 2004-10-08 23:54:27 -0400 (Fri, 08 Oct 2004) | 1 line
+
+merge in patch from xantus. fixes some output issues
+------------------------------------------------------------------------
+r321 | sungo | 2004-06-17 10:14:34 -0400 (Thu, 17 Jun 2004) | 1 line
+
+release changes
+------------------------------------------------------------------------
 r244 | sungo | 2004-05-02 21:08:15 -0400 (Sun, 02 May 2004) | 1 line
 
 add in Changes files and rebuild meta files
